hphp/hack/test/typecheck/idx2_5.php.like_types.exp
File "idx2_5.php", line 4, characters 13-14:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 4-25:
Expected KeyedContainer<[unresolved], ?[unresolved]>
File "idx2_5.php", line 3, characters 21-37:
But got dynamic because it is an unenforceable type
